--- a/src/fonts/font.css
+++ b/src/fonts/font.css
@@ -14,6 +14,6 @@
 }
 
 @font-face {
-  src: url(./Gilroy-SemiBold.woff) format("woff");
-  font-family: "Gilroy SemiBold";
+  src: url(./Gilroy-Bold.woff) format("woff");
+  font-family: "Gilroy Bold";
 }
