--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -56,7 +56,7 @@
   margin: 0 0 0 13px;
 }
 .header__text-cabinet {
-  font-family: "Gilroy SemiBold";
+  font-family: "Gilroy Bold";
   width: 101px;
   margin: 0;
 }
