--- a/src/components/SetsPage/SetsPage.css
+++ b/src/components/SetsPage/SetsPage.css
@@ -15,3 +15,10 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width: 1000px) {
+  .sets-page {
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
