--- a/src/components/SetsPage/SetsPage.css
+++ b/src/components/SetsPage/SetsPage.css
@@ -22,3 +22,10 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media screen and (max-width: 786px) {
+  .sets-page {
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
